deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mange-ta-main-front
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mange-ta-main-front
  template:
    metadata:
      labels:
        app: mange-ta-main-front
    spec:
      containers:
      - name: frontend
        image: docker.io/durantoine/mange-ta-main-front:11
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "3Gi"


---

apiVersion: v1
kind: Service
metadata:
  name: mange-ta-main-front
spec:
  selector:
    app: mange-ta-main-front
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: LoadBalancer
